<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backportadacel"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btzona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/boton"
                android:elevation="15dp"
                android:onClick="onZona"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/btnZona"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btntipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/boton"
                android:elevation="15dp"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/btnTipo"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btncliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/boton"
                android:elevation="15dp"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/btnCliente"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>